--- a/STM32VET6_DEMO.ioc
+++ b/STM32VET6_DEMO.ioc
@@ -27,28 +27,32 @@ Mcu.IP1=DMA
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART6
-Mcu.IPNb=8
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART6
+Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB8
-Mcu.Pin12=PB9
-Mcu.Pin13=VP_CRC_VS_CRC
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_CRC_VS_CRC
+Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
-Mcu.Pin5=PC6
-Mcu.Pin6=PC7
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.Pin5=PB13
+Mcu.Pin6=PB14
+Mcu.Pin7=PB15
+Mcu.Pin8=PC6
+Mcu.Pin9=PC7
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -91,6 +95,15 @@ PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB8.GPIOParameters=GPIO_Pu,GPIO_Mode
 PB8.GPIO_Mode=GPIO_MODE_AF_OD
 PB8.GPIO_Pu=GPIO_PULLUP
@@ -176,6 +189,11 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SPI2.CalculateBaudRate=21.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
